--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ requires-python = ">=3.11"
 dependencies = [
     "colorama>=0.4.6",
     "cryptography>=44.0.2",
-    "nuitka>=2.6.9",
     "prettytable>=3.16.0",
     "requests>=2.32.3",
     "tqdm>=4.67.1",
@@ -15,5 +14,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "nuitka>=2.6.9",
+    "pre-commit>=4.2.0",
+    "pyright[nodejs]>=1.1.398",
     "ruff>=0.11.4",
 ]
